# miningcore

./: .gitattributes  .gitignore  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  build-debian-11.sh  build-ubuntu-20.04.sh  build-ubuntu-21.04.sh  build-ubuntu-22.04.sh  build-windows.bat  build.sh  coins.json  config.json  docker-build.sh  docker-compose.yml  miningcore.code-workspace  packages-microsoft-prod.deb  research.js
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: develop_miningcore-stratum.yml  dotnet.yml
devops/: install_dependencies.sh
devops/poolservice/: poolservice  poolservice.profile
docker/: NuGet.config  alpine-build.sh
examples/: callisto_pool.json  conceal_pool.json  dash_pool.json  dash_pool_no_polling.json  digibyte_scrypt_pool.json  digibyte_sha256_pool.json  ethereum_pool.json  ethereum_pool_SOLO.json  ethereumclassic_pool.json  flo_pool.json  litecoin_dash_pool.json  litecoin_pool.json  monero_pool.json  multialgopool-example(BTC,DOGE,GLT,LTC,LCC,ZEC).json  pakcoin_pool.json  ravencoin_pool.json  straks_pool.json  ubiq_pool.json  verus_pool.json  zcash_pool.json  zen_pool.json
scripts/: build_pipeline.sh  build_test_pipeline.sh
src/: .editorconfig  MiningCore.Web.sln  MiningCore.sln  MiningCore.sln.DotSettings  MiningForce.Web.sln  MiningForce.sln  Miningcore.sln  Miningcore.sln.DotSettings  ServiceHost.sln  grline17.xml
src/CodeContracts/: CodeContracts.csproj  Contract.cs
src/Configuration/: ClusterConfig.cs  ClusterConfiguration.cs  (+4 more)
src/Native/libkawpow/ethash/: CMakeLists.txt  bit_manipulation.h  builtins.h  endianness.hpp  ethash-internal.hpp  ethash.cpp  ethash.h  ethash.hpp  hash_types.h  hash_types.hpp  keccak.h  keccak.hpp  kiss99.hpp  managed.cpp  primes.c  primes.h  progpow.cpp  progpow.hpp  version.h
src/Native/libkawpow/keccak/: CMakeLists.txt  keccak.c  keccakf1600.c  keccakf800.c
tools/: transfer-tool.py
(+2325 files in other folders)
